# real-time-iot-edge-agent

./: .editorconfig  .gitignore  API_EXAMPLES.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  START_GUIDE.md
.github/workflows/: ci.yml
agent-c/: CMakeLists.txt  Makefile  README.md
agent-c/config/: agent.ini
agent-c/include/: mqtt_client.h
agent-c/src/: main.c  mqtt_client.c
agent-cpp/: CMakeLists.txt  Makefile
agent-cpp/config/: agent.json
agent-cpp/include/: config.hpp  fft_analyzer.hpp  http_client.hpp  local_analytics.hpp
agent-cpp/src/: config.cpp  http_client.cpp  main.cpp  vibration_sensor.cpp
backend/: .dockerignore  .prettierrc  Dockerfile  jest.config.js  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/prisma/migrations/20240101000000_init/: migration.sql
backend/scripts/: ingest-sample.sh  query-anomalies.sh  query-metrics.sh  seed.ts
backend/src/: index.ts  realtime.ts
backend/src/anomaly/: engine.ts  index.ts  isoforest.ts  median-deviation.ts  pyservice.ts  zscore.ts
backend/src/anomaly/__tests__/: isoforest.test.ts  median-deviation.test.ts  zscore.test.ts
backend/src/jobs/: cleanup.ts
backend/src/middleware/: auth.ts
backend/src/mqtt/: bridge.ts
backend/src/routes/: anomalies.ts  devices.ts  health.ts  ingest.ts  metrics.ts
backend/src/routes/__tests__/: devices.test.ts  health.test.ts  ingest.test.ts
backend/src/utils/: logger.ts
dashboard/: .dockerignore  Dockerfile  jest.config.js  jest.setup.js  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/__tests__/: page.test.tsx
dashboard/app/anomalies/: page.tsx
dashboard/app/devices/: page.tsx
dashboard/app/devices/[id]/: page.tsx
dashboard/app/map/: page.tsx
dashboard/components/: AnomalyBadge.tsx  DeviceTable.tsx  LiveStatus.tsx  MapCard.tsx  MetricChart.tsx  Navigation.tsx  PlotlyChart.tsx
dashboard/components/__tests__/: AnomalyBadge.test.tsx  LiveStatus.test.tsx
dashboard/lib/: api.ts  socket.ts
infra/: docker-compose.yml
infra/mosquitto/: mosquitto.conf
ml-service/: Dockerfile  requirements.txt
ml-service/app/: main.py
scripts/: verify-setup.sh
